// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`RatingStars snapshots deprecated overwrite actual props 1`] = `
<scale-rating-stars label="Rating" max="12" max-rating="12" rating="0" size="small" star-size="small">
  <template shadowrootmode="open">
    <div part="container">
      <label htmlfor="scale-rating-star-5" id="scale-rating-star-5-label" part="label">
        Rating
      </label>
      <div part="content">
        <div aria-orientation="horizontal" aria-valuetext="0 out of 12 stars" part="wrapper">
          <input aria-labelledby="scale-rating-star-5-label" aria-valuemax="12" aria-valuemin="0" aria-valuenow="0" aria-valuetext="0 out of 12 stars" id="scale-rating-star-5" max="13" min="0" part="range-slider" step="1" type="range" value="0">
          <div data-value="1" part="star" style="z-index: 5;">
            <scale-icon-action-favorite part="placeholder-star" size="16"></scale-icon-action-favorite>
            <div class="icon-clip">
              <scale-icon-action-favorite part="selected-star" selected="" size="16"></scale-icon-action-favorite>
            </div>
          </div>
          <div data-value="2" part="star" style="z-index: auto;">
            <scale-icon-action-favorite part="placeholder-star" size="16"></scale-icon-action-favorite>
            <div class="icon-clip">
              <scale-icon-action-favorite part="selected-star" selected="" size="16"></scale-icon-action-favorite>
            </div>
          </div>
          <div data-value="3" part="star" style="z-index: auto;">
            <scale-icon-action-favorite part="placeholder-star" size="16"></scale-icon-action-favorite>
            <div class="icon-clip">
              <scale-icon-action-favorite part="selected-star" selected="" size="16"></scale-icon-action-favorite>
            </div>
          </div>
          <div data-value="4" part="star" style="z-index: auto;">
            <scale-icon-action-favorite part="placeholder-star" size="16"></scale-icon-action-favorite>
            <div class="icon-clip">
              <scale-icon-action-favorite part="selected-star" selected="" size="16"></scale-icon-action-favorite>
            </div>
          </div>
          <div data-value="5" part="star" style="z-index: auto;">
            <scale-icon-action-favorite part="placeholder-star" size="16"></scale-icon-action-favorite>
            <div class="icon-clip">
              <scale-icon-action-favorite part="selected-star" selected="" size="16"></scale-icon-action-favorite>
            </div>
          </div>
          <div data-value="6" part="star" style="z-index: auto;">
            <scale-icon-action-favorite part="placeholder-star" size="16"></scale-icon-action-favorite>
            <div class="icon-clip">
              <scale-icon-action-favorite part="selected-star" selected="" size="16"></scale-icon-action-favorite>
            </div>
          </div>
          <div data-value="7" part="star" style="z-index: auto;">
            <scale-icon-action-favorite part="placeholder-star" size="16"></scale-icon-action-favorite>
            <div class="icon-clip">
              <scale-icon-action-favorite part="selected-star" selected="" size="16"></scale-icon-action-favorite>
            </div>
          </div>
          <div data-value="8" part="star" style="z-index: auto;">
            <scale-icon-action-favorite part="placeholder-star" size="16"></scale-icon-action-favorite>
            <div class="icon-clip">
              <scale-icon-action-favorite part="selected-star" selected="" size="16"></scale-icon-action-favorite>
            </div>
          </div>
          <div data-value="9" part="star" style="z-index: auto;">
            <scale-icon-action-favorite part="placeholder-star" size="16"></scale-icon-action-favorite>
            <div class="icon-clip">
              <scale-icon-action-favorite part="selected-star" selected="" size="16"></scale-icon-action-favorite>
            </div>
          </div>
          <div data-value="10" part="star" style="z-index: auto;">
            <scale-icon-action-favorite part="placeholder-star" size="16"></scale-icon-action-favorite>
            <div class="icon-clip">
              <scale-icon-action-favorite part="selected-star" selected="" size="16"></scale-icon-action-favorite>
            </div>
          </div>
          <div data-value="11" part="star" style="z-index: auto;">
            <scale-icon-action-favorite part="placeholder-star" size="16"></scale-icon-action-favorite>
            <div class="icon-clip">
              <scale-icon-action-favorite part="selected-star" selected="" size="16"></scale-icon-action-favorite>
            </div>
          </div>
          <div data-value="12" part="star" style="z-index: auto;">
            <scale-icon-action-favorite part="placeholder-star" size="16"></scale-icon-action-favorite>
            <div class="icon-clip">
              <scale-icon-action-favorite part="selected-star" selected="" size="16"></scale-icon-action-favorite>
            </div>
          </div>
        </div>
      </div>
    </div>
  </template>
</scale-rating-stars>
`;

exports[`RatingStars snapshots rating 2 1`] = `
<scale-rating-stars label="Rating" max="5" rating="2" size="large">
  <template shadowrootmode="open">
    <div part="container">
      <label htmlfor="scale-rating-star-1" id="scale-rating-star-1-label" part="label">
        Rating
      </label>
      <div part="content">
        <div aria-orientation="horizontal" aria-valuetext="2 out of 5 stars" part="wrapper">
          <input aria-labelledby="scale-rating-star-1-label" aria-valuemax="5" aria-valuemin="0" aria-valuenow="2" aria-valuetext="2 out of 5 stars" id="scale-rating-star-1" max="6" min="0" part="range-slider" step="1" type="range" value="2">
          <div data-selected data-value="1" part="star" style="z-index: 5;">
            <scale-icon-action-favorite part="placeholder-star" size="24"></scale-icon-action-favorite>
            <div class="icon-clip">
              <scale-icon-action-favorite part="selected-star" selected="" size="24"></scale-icon-action-favorite>
            </div>
          </div>
          <div data-selected data-value="2" part="star" style="z-index: auto;">
            <scale-icon-action-favorite part="placeholder-star" size="24"></scale-icon-action-favorite>
            <div class="icon-clip">
              <scale-icon-action-favorite part="selected-star" selected="" size="24"></scale-icon-action-favorite>
            </div>
          </div>
          <div data-value="3" part="star" style="z-index: auto;">
            <scale-icon-action-favorite part="placeholder-star" size="24"></scale-icon-action-favorite>
            <div class="icon-clip">
              <scale-icon-action-favorite part="selected-star" selected="" size="24"></scale-icon-action-favorite>
            </div>
          </div>
          <div data-value="4" part="star" style="z-index: auto;">
            <scale-icon-action-favorite part="placeholder-star" size="24"></scale-icon-action-favorite>
            <div class="icon-clip">
              <scale-icon-action-favorite part="selected-star" selected="" size="24"></scale-icon-action-favorite>
            </div>
          </div>
          <div data-value="5" part="star" style="z-index: auto;">
            <scale-icon-action-favorite part="placeholder-star" size="24"></scale-icon-action-favorite>
            <div class="icon-clip">
              <scale-icon-action-favorite part="selected-star" selected="" size="24"></scale-icon-action-favorite>
            </div>
          </div>
        </div>
      </div>
    </div>
  </template>
</scale-rating-stars>
`;

exports[`RatingStars snapshots rating 2, maxRating 7 1`] = `
<scale-rating-stars label="Rating" max="7" max-rating="7" rating="2" size="large">
  <template shadowrootmode="open">
    <div part="container">
      <label htmlfor="scale-rating-star-3" id="scale-rating-star-3-label" part="label">
        Rating
      </label>
      <div part="content">
        <div aria-orientation="horizontal" aria-valuetext="2 out of 7 stars" part="wrapper">
          <input aria-labelledby="scale-rating-star-3-label" aria-valuemax="7" aria-valuemin="0" aria-valuenow="2" aria-valuetext="2 out of 7 stars" id="scale-rating-star-3" max="8" min="0" part="range-slider" step="1" type="range" value="2">
          <div data-selected data-value="1" part="star" style="z-index: 5;">
            <scale-icon-action-favorite part="placeholder-star" size="24"></scale-icon-action-favorite>
            <div class="icon-clip">
              <scale-icon-action-favorite part="selected-star" selected="" size="24"></scale-icon-action-favorite>
            </div>
          </div>
          <div data-selected data-value="2" part="star" style="z-index: auto;">
            <scale-icon-action-favorite part="placeholder-star" size="24"></scale-icon-action-favorite>
            <div class="icon-clip">
              <scale-icon-action-favorite part="selected-star" selected="" size="24"></scale-icon-action-favorite>
            </div>
          </div>
          <div data-value="3" part="star" style="z-index: auto;">
            <scale-icon-action-favorite part="placeholder-star" size="24"></scale-icon-action-favorite>
            <div class="icon-clip">
              <scale-icon-action-favorite part="selected-star" selected="" size="24"></scale-icon-action-favorite>
            </div>
          </div>
          <div data-value="4" part="star" style="z-index: auto;">
            <scale-icon-action-favorite part="placeholder-star" size="24"></scale-icon-action-favorite>
            <div class="icon-clip">
              <scale-icon-action-favorite part="selected-star" selected="" size="24"></scale-icon-action-favorite>
            </div>
          </div>
          <div data-value="5" part="star" style="z-index: auto;">
            <scale-icon-action-favorite part="placeholder-star" size="24"></scale-icon-action-favorite>
            <div class="icon-clip">
              <scale-icon-action-favorite part="selected-star" selected="" size="24"></scale-icon-action-favorite>
            </div>
          </div>
          <div data-value="6" part="star" style="z-index: auto;">
            <scale-icon-action-favorite part="placeholder-star" size="24"></scale-icon-action-favorite>
            <div class="icon-clip">
              <scale-icon-action-favorite part="selected-star" selected="" size="24"></scale-icon-action-favorite>
            </div>
          </div>
          <div data-value="7" part="star" style="z-index: auto;">
            <scale-icon-action-favorite part="placeholder-star" size="24"></scale-icon-action-favorite>
            <div class="icon-clip">
              <scale-icon-action-favorite part="selected-star" selected="" size="24"></scale-icon-action-favorite>
            </div>
          </div>
        </div>
      </div>
    </div>
  </template>
</scale-rating-stars>
`;

exports[`RatingStars snapshots rating 3, disabled 1`] = `
<scale-rating-stars class="disabled" disabled="" label="Rating" max="5" rating="0" size="large">
  <template shadowrootmode="open">
    <div part="container">
      <label htmlfor="scale-rating-star-4" id="scale-rating-star-4-label" part="label">
        Rating
      </label>
      <div part="content">
        <div aria-orientation="horizontal" aria-valuetext="0 out of 5 stars" part="wrapper">
          <input aria-labelledby="scale-rating-star-4-label" aria-valuemax="5" aria-valuemin="0" aria-valuenow="0" aria-valuetext="0 out of 5 stars" disabled="" id="scale-rating-star-4" max="6" min="0" part="range-slider" step="1" type="range" value="0">
          <div data-value="1" part="star" style="z-index: 5;">
            <scale-icon-action-favorite part="placeholder-star" size="24"></scale-icon-action-favorite>
            <div class="icon-clip">
              <scale-icon-action-favorite part="selected-star" selected="" size="24"></scale-icon-action-favorite>
            </div>
          </div>
          <div data-value="2" part="star" style="z-index: auto;">
            <scale-icon-action-favorite part="placeholder-star" size="24"></scale-icon-action-favorite>
            <div class="icon-clip">
              <scale-icon-action-favorite part="selected-star" selected="" size="24"></scale-icon-action-favorite>
            </div>
          </div>
          <div data-value="3" part="star" style="z-index: auto;">
            <scale-icon-action-favorite part="placeholder-star" size="24"></scale-icon-action-favorite>
            <div class="icon-clip">
              <scale-icon-action-favorite part="selected-star" selected="" size="24"></scale-icon-action-favorite>
            </div>
          </div>
          <div data-value="4" part="star" style="z-index: auto;">
            <scale-icon-action-favorite part="placeholder-star" size="24"></scale-icon-action-favorite>
            <div class="icon-clip">
              <scale-icon-action-favorite part="selected-star" selected="" size="24"></scale-icon-action-favorite>
            </div>
          </div>
          <div data-value="5" part="star" style="z-index: auto;">
            <scale-icon-action-favorite part="placeholder-star" size="24"></scale-icon-action-favorite>
            <div class="icon-clip">
              <scale-icon-action-favorite part="selected-star" selected="" size="24"></scale-icon-action-favorite>
            </div>
          </div>
        </div>
      </div>
    </div>
  </template>
</scale-rating-stars>
`;

exports[`RatingStars snapshots rating 3, minRating 1 1`] = `
<scale-rating-stars label="Rating" max="5" min-rating="1" rating="3" size="large">
  <template shadowrootmode="open">
    <div part="container">
      <label htmlfor="scale-rating-star-2" id="scale-rating-star-2-label" part="label">
        Rating
      </label>
      <div part="content">
        <div aria-orientation="horizontal" aria-valuetext="3 out of 5 stars" part="wrapper">
          <input aria-labelledby="scale-rating-star-2-label" aria-valuemax="5" aria-valuemin="1" aria-valuenow="3" aria-valuetext="3 out of 5 stars" id="scale-rating-star-2" max="6" min="0" part="range-slider" step="1" type="range" value="3">
          <div data-selected data-value="1" part="star" style="z-index: 5;">
            <scale-icon-action-favorite part="placeholder-star" size="24"></scale-icon-action-favorite>
            <div class="icon-clip">
              <scale-icon-action-favorite part="selected-star" selected="" size="24"></scale-icon-action-favorite>
            </div>
          </div>
          <div data-selected data-value="2" part="star" style="z-index: auto;">
            <scale-icon-action-favorite part="placeholder-star" size="24"></scale-icon-action-favorite>
            <div class="icon-clip">
              <scale-icon-action-favorite part="selected-star" selected="" size="24"></scale-icon-action-favorite>
            </div>
          </div>
          <div data-selected data-value="3" part="star" style="z-index: auto;">
            <scale-icon-action-favorite part="placeholder-star" size="24"></scale-icon-action-favorite>
            <div class="icon-clip">
              <scale-icon-action-favorite part="selected-star" selected="" size="24"></scale-icon-action-favorite>
            </div>
          </div>
          <div data-value="4" part="star" style="z-index: auto;">
            <scale-icon-action-favorite part="placeholder-star" size="24"></scale-icon-action-favorite>
            <div class="icon-clip">
              <scale-icon-action-favorite part="selected-star" selected="" size="24"></scale-icon-action-favorite>
            </div>
          </div>
          <div data-value="5" part="star" style="z-index: auto;">
            <scale-icon-action-favorite part="placeholder-star" size="24"></scale-icon-action-favorite>
            <div class="icon-clip">
              <scale-icon-action-favorite part="selected-star" selected="" size="24"></scale-icon-action-favorite>
            </div>
          </div>
        </div>
      </div>
    </div>
  </template>
</scale-rating-stars>
`;
